fixed image overflowing issue in person-page

--- a/src/css/vocabulary.css
+++ b/src/css/vocabulary.css
@@ -1782,7 +1782,7 @@ body > footer .license svg {
     box-sizing: border-box;
 
     width: 100%;
-
+    max-height: 21.8rem;
     border: 16px solid white;
 }
 
